--- a/ML_COURSEWORK/tests.ipynb
+++ b/ML_COURSEWORK/tests.ipynb
@@ -617,12 +617,14 @@
    "source": [
     "feature_valid_errors = []\n",
     "optimals = []\n",
+    "all_errors_list = []\n",
     "\n",
     "for i, features in enumerate(feature_sets):\n",
     "    print(f\"\\n\\nSet {i+1}:\\n\")\n",
     "    all_errors, optimal = Gx.grid_search(features, target)\n",
     "\n",
     "    optimals.append(optimal)\n",
+    "    all_errors_list.append(all_errors)\n",
     "    feature_valid_errors.append(optimal.mean_error)"
    ]
   },
@@ -637,6 +639,26 @@
     "valid_errors = dict(zip(feature_set_names, feature_valid_errors))\n",
     "lowest_error_idx = pd.Series(valid_errors).argmin()\n",
     "optimal_feature_set_name = list(valid_errors)[lowest_error_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.49133218131306133"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hyperparameter_choices[\"base\"].mean_error"
    ]
   },
   {
