--- a/ML_COURSEWORK/tests.ipynb
+++ b/ML_COURSEWORK/tests.ipynb
@@ -764,6 +764,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "max_depth                3.000000\n",
+       "min_impurity_decrease    0.000000\n",
+       "mean_error               0.075465\n",
+       "stdev_error              0.134780\n",
+       "Name: 0, dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "optimal_hps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimal_dict = dict(zip(feature_set_dict.keys(), optimals))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "max_depth                3.000000\n",
+       "min_impurity_decrease    0.100000\n",
+       "mean_error               0.493203\n",
+       "stdev_error              0.802317\n",
+       "Name: 1, dtype: float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "optimal_dict['base']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
@@ -786,8 +843,16 @@
    "source": [
     "hyperparams = [\"max_depth\", \"min_impurity_decrease\"]\n",
     "indexed_errors = all_errors.set_index(hyperparams)\n",
-    "indexed_errors.mean_error"
+    "indexed_errors.mean_error\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
